--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.0"
 gh-emoji = "1.0.7"
 pulldown-cmark = { version = "0.9.2", features = ["simd", "serde"] }
 serde = { version = "1.0.156", features = ["derive"] }
