--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.21.0"
+chrono = "0.4.24"
 gh-emoji = "1.0.7"
 pulldown-cmark = { version = "0.9.2", features = ["simd", "serde"] }
 serde = { version = "1.0.156", features = ["derive"] }
@@ -15,3 +16,4 @@ syntect = "5.0.0"
 thiserror = "1.0.39"
 toml = "0.7.3"
 walkdir = "2.3.2"
+zzz = "0.2.0"
