--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,17 @@ edition = "2021"
 base64 = "0.21.0"
 chrono = "0.4.24"
 gh-emoji = "1.0.7"
+minify-html = "0.10.8"
 pulldown-cmark = { version = "0.9.2", features = ["simd", "serde"] }
 serde = { version = "1.0.156", features = ["derive"] }
+tokio = { version = "1.11.0", features = ["rt-multi-thread", "fs", "macros"] }
 structopt = "0.3.26"
 syntect = "5.0.0"
 thiserror = "1.0.39"
 toml = "0.7.3"
 walkdir = "2.3.2"
 zzz = "0.2.0"
+
+[[bin]]
+name = "raven"
+path = "src/main.rs"
