--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ gh-emoji = "1.0.7"
 minify-html = "0.10.8"
 pulldown-cmark = { version = "0.9.2", features = ["simd", "serde"] }
 serde = { version = "1.0.156", features = ["derive"] }
-tokio = { version = "1.11.0", features = ["rt-multi-thread", "fs", "macros"] }
+tokio = { version = "1.11.0", features = ["rt-multi-thread", "fs", "macros", "sync"] }
 structopt = "0.3.26"
 syntect = "5.0.0"
 thiserror = "1.0.39"
