--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "rustic_raven"
 version = "0.1.0"
 edition = "2021"
+description = "A static html generator"
+license = "Apache-2.0"
+authors = ["Decator <decator.c@proton.me>"]
+repository = "https://github.com/El-Wumbus/RusticRaven/tree/docs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
