--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,7 +7,7 @@ description: |
   use.
 base: core18
 architectures:
-  - build-on: [amd64,x86_64,i386]
+  - build-on: [amd64,arm64,i386]
 confinement: strict
 parts:
   raven:
@@ -16,3 +16,4 @@ parts:
 apps:
   raven:
     command: bin/raven
+grade: devel
