--- a/raven.toml
+++ b/raven.toml
@@ -1,14 +1,7 @@
 source = "src"
 dest = "docs"
 syntaxes = "syntaxes"
-syntax_theme = "base16-eighties.dark"
+syntax_theme = "gruvbox"
 custom_syntax_themes = "syntax-themes"
-
-[default]
-favicon = "favicon.ico"
-stylesheet = "style.css"
-template = "template.html"
-
-[generation]
-process = { minify = true }
-treat_source_as_template = true
+default_favicon = "favicon.ico"
+process_html = true
