--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ license = "Apache-2.0"
 authors = ["Decator <decator.c@proton.me>"]
 repository = "https://github.com/El-Wumbus/RusticRaven/tree/docs"
 
+
+[profile.release]
+strip = "symbols"
+lto = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
