--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ walkdir = "2.3.2"
 dashmap = "5.4.0"
 indicatif = { version = "0.17.3", features = ["tokio"] }
 structstruck = "0.4.0"
+htmlescape = "0.3.1"
 
 [[bin]]
 name = "raven"
